--- a/Module.yml
+++ b/Module.yml
@@ -26,6 +26,12 @@ environments:
     default: 80
     type: integer
     name: Port
+  - key: EGRESS_URL
+    description: URL to pass the result payload to
+    value: ''
+    default:
+    type: string
+    name: Egress URL    
   - key: INFLUXDB_URL
     description: URL for InfluxDB endpoint
     value: ''
