--- a/Module.yml
+++ b/Module.yml
@@ -4,9 +4,7 @@ description: InfluxDB module
 icon: https://icons-020-demo.s3.eu-central-1.amazonaws.com/mi_influxdb-telegraf_output.png
 type: input
 tags:
-  - McClimate
-  - Vicki
-  - Encoder
+  - InfluxDB
 categories:
   - id: category
     name: Encoder
