--- a/Module.yaml
+++ b/Module.yaml
@@ -2,7 +2,7 @@ version: 1.0.0
 name: InfluxDB Module
 description: InfluxDB module
 icon: https://icons-020-demo.s3.eu-central-1.amazonaws.com/mi_influxdb-telegraf_output.png
-type: input
+type: process
 tags:
   - McClimate
   - Vicki
@@ -14,13 +14,13 @@ image:
   name: weevenetwork/influxdb-http
   tag: latest
 environments:
-  - key: HOST_NAME
+  - key: INGRESS_HOST
     description: Host name/address where the server will run.
     value: ''
     default: 0.0.0.0
     type: string
     name: Host Name
-  - key: HOST_PORT
+  - key: INGRESS_PORT
     description: Port on which the server will run.
     value: ''
     default: 80
