--- a/config.env
+++ b/config.env
@@ -1,7 +1,8 @@
 # GENERAL CONFIGURATION VARIABLES
 
-HOST_NAME=0.0.0.0
-HOST_PORT=80
+INGRESS_HOST=0.0.0.0
+INGRESS_PORT=80
+INGRESS_PATH=/
 EGRESS_URL=
 INFLUXDB_URL=
 INFLUXDB_API_KEY=
