--- a/Module.yaml
+++ b/Module.yaml
@@ -1,6 +1,6 @@
 version: 1.0.0
-name: InfluxDB Module
-description: InfluxDB module
+name: InfluxDB HTTP
+description: The module sends query to InfluxDB and reads data
 icon: https://icons-020-demo.s3.eu-central-1.amazonaws.com/mi_influxdb-telegraf_output.png
 type: process
 tags:
@@ -14,18 +14,6 @@ image:
   name: weevenetwork/influxdb-http
   tag: latest
 environments:
-  - key: INGRESS_HOST
-    description: Host name/address where the server will run.
-    value: ''
-    default: 0.0.0.0
-    type: string
-    name: Host Name
-  - key: INGRESS_PORT
-    description: Port on which the server will run.
-    value: ''
-    default: 80
-    type: integer
-    name: Port 
   - key: INFLUXDB_URL
     description: URL for InfluxDB endpoint
     value: ''
