--- a/config.env
+++ b/config.env
@@ -4,10 +4,10 @@ INGRESS_HOST=0.0.0.0
 INGRESS_PORT=80
 INGRESS_PATH=/
 EGRESS_URL=
-INFLUXDB_URL=
+INFLUXDB_URL=https://influxdb.wohnio.weeve.engineering
 INFLUXDB_API_KEY=
-INFLUXDB_ORG=
-INFLUXDB_BUCKET=
+INFLUXDB_ORG=wohnio
+INFLUXDB_BUCKET=testmp
 MODULE_NAME=influxdb-http
 MODULE_TYPE=PROCESS
 
