--- a/deploy.env
+++ b/deploy.env
@@ -2,7 +2,7 @@
 # You have to define the values in {}
 APP_NAME=influxdb-http
 ACCOUNT_NAME=weevenetwork
-DESCRIPTION="Decoder for InfluxDB Module"
+DESCRIPTION="InfluxDB HTTP"
 NETWORK_NAME=dtestnet
 #DOCKER_REPO={account-nr}.dkr.ecr.{region}.amazonaws.com
 # optional aws-cli options
