--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,3 +8,8 @@ services:
       MODULE_NAME: influx_db
       INGRESS_HOST: 127.0.0.1
       INGRESS_PORT: 80
+      INFLUXDB_URL: 'https://influxdb.wohnio.weeve.engineering'
+      INFLUXDB_API_KEY: ''
+      INFLUXDB_ORG: 'wohnio'
+      INFLUXDB_BUCKET: 'wohnio'
+
