run as standalone to be default

--- a/config.env
+++ b/config.env
@@ -8,7 +8,7 @@ INFLUXDB_URL=https://influxdb.wohnio.weeve.engineering
 INFLUXDB_API_KEY=
 INFLUXDB_ORG=wohnio
 INFLUXDB_BUCKET=testmp
-RUN_AS_STANDALONE=no
+RUN_AS_STANDALONE=yes
 MODULE_NAME=influxdb-http
 MODULE_TYPE=PROCESS
 
