--- a/deploy.env
+++ b/deploy.env
@@ -1,8 +1,8 @@
 # ENV VARIABLES FOR DEPLOYMENT
 # You have to define the values in {}
-APP_NAME=influxdb-http
+APP_NAME=influxdb-query
 ACCOUNT_NAME=weevenetwork
-DESCRIPTION="InfluxDB HTTP"
+DESCRIPTION=InfluxDB Query
 NETWORK_NAME=dtestnet
 #DOCKER_REPO={account-nr}.dkr.ecr.{region}.amazonaws.com
 # optional aws-cli options
