--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,11 @@
 version: '1'
 services:
-  influx_db:
+  influxdb_query:
     build:
       context: .
       dockerfile: Dockerfile
     environment:
-      MODULE_NAME: influx_db
+      MODULE_NAME: influxdb-query
       INGRESS_HOST: 127.0.0.1
       INGRESS_PORT: 80
       INFLUXDB_URL: 'https://influxdb.wohnio.weeve.engineering'
