--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "influxdb-http",
+  "name": "influxdb-query",
   "version": "1.0.0",
   "description": "",
   "main": "image/src/app.js",
@@ -13,7 +13,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/weeve-modules/influxdb-http"
+    "url": "https://github.com/weeve-modules/influxdb-query"
   },
   "keywords": [],
   "author": "",
@@ -21,7 +21,7 @@
   "bugs": {
     "url": "https://tnextbigthing.atlassian.net/browse/WMD-12"
   },
-  "homepage": "https://github.com/weeve-modules/influxdb-http",
+  "homepage": "https://github.com/weeve-modules/influxdb-query",
   "devDependencies": {
     "dotenv": "^9.0.2",
     "eslint": "^7.26.0",
