--- a/Module.yaml
+++ b/Module.yaml
@@ -1,58 +1,54 @@
-version: 1.0.0
-name: InfluxDB Query
-description: The module sends query to InfluxDB and reads data
-icon: https://icons-020-demo.s3.eu-central-1.amazonaws.com/mi_InfluxDB-http_process.png
-type: process
-tags:
-  - McClimate
-  - Vicki
-  - Encoder
-categories:
-  - id: category
-    name: Encoder
+displayName: 'InfluxDB Query'       # Display name for the module that will be displayed in the UI.
+moduleName: 'influxdb-query'        # Module name that will be used to reference the module, and uniquely identify the module and their versions.
+description: 'The module sends query to InfluxDB and reads data.'       # Module description that will be displayed in the UI.
+versionName: 'v1.0.0'                    # Module version name that will be used to reference the module version, and uniquely identify the module version with a common name.
+isPublic: true                          # Boolean value that indicates if the module is Public or Private.
+categories:                             # Array of category that will be used to group the module in the UI.
+  - 'InfluxDB'
+type: 'Processing'      # Module type (Input, Processing, Output) that will be used to group the module in the UI.
 image:
-  name: weevenetwork/influxdb-query
-  tag: latest
-environments:
-  - key: INFLUXDB_URL
+  name: 'weevenetwork/influxdb-query'     # Image name from the docker registry.
+  tag: 'latest'                               # Image tag from the docker registry.
+  homepage: 'https://hub.docker.com/weevenetwork/influxdb-query'      # Image homepage from the docker registry.
+repository: 'https://github.com/weeve-modules/influxdb-query'     # Repository URL to source code.
+envs:                                   # Array of environment variables that will be used to configure the module. Also used to show related fields on the UI.
+  - name: InfluxDB URL
+    key: INFLUXDB_URL
     description: URL for InfluxDB endpoint
-    value: ''
-    default: no
-    type: string
-    name: InfluxDB URL
-  - key: INFLUXDB_API_KEY
+    value: ''    
+    type: 'text'
+  - name: InfluxDB API Key
+    key: INFLUXDB_API_KEY
     description: API key for influx DB
-    value: ''
-    default: no
-    type: string
-    name: InfluxDB API Key
-  - key: INFLUXDB_ORG
+    value: ''    
+    type: 'text'
+  - name: Organization name
+    key: INFLUXDB_ORG
     description: Organization name
-    value: ''
-    default: no
-    type: string
-    name: Organization name
-  - key: INFLUXDB_BUCKET
+    value: ''    
+    type: 'text'
+  - name: Bucket name
+    key: INFLUXDB_BUCKET
     description: Bucket name for data access
-    value: ''
-    default: no
-    type: string
-    name: Bucket name
-  - key: RUN_AS_STANDALONE
+    value: ''    
+    type: 'text'
+  - name: Run as Standalone
+    key: RUN_AS_STANDALONE
     description: Run as standalone rest API service
-    value: ''
-    default: no
-    type: enum
+    value: ''    
+    type: 'select'
     options:
       - yes
       - no
-    name: Run as Standalone
-commands: []
-document:
-  ports: []
-  volumes: []
-  restart_policy:
-    condition: on-failure
-    delay: 10s
-    max_attempts: 3
-    window: 120s
+ports:                                  # Array of ports that will be exposed by the module.
+  - container: 8080                     # Port number from the container.
+    host: 8080                          # Port number to map on the host.
+mounts:
+  - container: '/data'                  # Mount path from the container.
+    host: '/data'                       # Mount path to map on the host.
+tags:                                   # Array of tags.
+  - 'NodeJS'
+  - 'Processing'
+  - 'InfluxDB'
+  - 'Boilerplate 1.0.0'
+icon: 'https://icons-020-demo.s3.eu-central-1.amazonaws.com/mi_InfluxDB-http_process.png'    # Icon URL that will be displayed in the UI.
