--- a/Module.yaml
+++ b/Module.yaml
@@ -49,10 +49,14 @@ envs:                                   # Array of environment variables that wi
       - yes
       - no
     dependencies: []
+ports: []
+envPorts: []
 mounts: []
+envMounts: []
+devices: []
+envDevices: []
 tags:                                   # Array of tags.
   - 'NodeJS'
   - 'Processing'
   - 'InfluxDB'
-  - 'Boilerplate 1.0.0'
 icon: 'https://icons-020-demo.s3.eu-central-1.amazonaws.com/mi_InfluxDB-http_process.png'    # Icon URL that will be displayed in the UI.
